--- a/dotcom-rendering/src/server/dev-index.html
+++ b/dotcom-rendering/src/server/dev-index.html
@@ -648,8 +648,13 @@
 				// All interactive pages include this in the URL
 				if (url.includes('/ng-interactive/')) return 'Interactive';
 				// We're looking for the date string, e.g /2022/jul/30
-				else if (url.match(/[0-9]{4}\/[a-z]{3}\/[0-9]{2}\/.+/))
+				else if (
+					url.match(/(\/\d{4}\/[a-z]{3}\/\d{2}\/|\/[a-z-]+\/\d+$)/)
+				)
 					return 'Article';
+				// This is imperfect, but covers some cases of tag pages, consider expanding in the future
+				else if (url.match(/\/(tone|series|profile)\/[a-z-]+/))
+					return 'TagPage';
 				// Fall back to fronts for all other page types
 				else return 'Front';
 			};
